@@ -179,6 +179,10 @@ ImageScale 100
 # (0 = not shown, 1 = continuation of existing bar, 2 = separate bar)
 EstimateStyle 1
 
+# bar column in list outputs shows rate if OutputStyle is 3
+# (1 = enabled, 0 = disabled)
+BarColumnShowsRate 0
+
 # image colors
 CBackground     "FFFFFF"
 CEdge           "AEAEAE"
