@@ -73,6 +73,7 @@ int loadcfg(const char *cfgfile)
 		 {"TransparentBg", 0, &cfg.transbg, 0, 0},
 		 {"ImageScale", 0, &cfg.imagescale, 0, 0},
 		 {"EstimateStyle", 0, &cfg.estimatestyle, 0, 0},
+		 {"BarColumnShowsRate", 0, &cfg.barshowsrate, 0, 0},
 		 {"CBackground", cfg.cbg, 0, 8, 0},
 		 {"CEdge", cfg.cedge, 0, 8, 0},
 		 {"CHeader", cfg.cheader, 0, 8, 0},
@@ -202,6 +203,7 @@ void validatecfg(void)
 	validatebool("TransparentBg", &cfg.transbg, TRANSBG);
 	validateint("ImageScale", &cfg.imagescale, IMAGESCALE, 50, 500);
 	validateint("EstimateStyle", &cfg.estimatestyle, ESTIMATESTYLE, 0, 2);
+	validatebool("BarColumnShowsRate", &cfg.barshowsrate, BARSHOWSRATE);
 	validatebool("HourlyRate", &cfg.hourlyrate, HOURLYRATE);
 	validatebool("SummaryRate", &cfg.summaryrate, SUMMARYRATE);
 	validatebool("TrafficlessEntries", &cfg.trafficlessentries, TRAFFICLESSENTRIES);
@@ -283,6 +285,14 @@ void validatecfg(void)
 			printe(PT_Config);
 		}
 	}
+
+	/* affects only image output */
+	if (cfg.barshowsrate && cfg.estimatebarvisible) {
+		cfg.estimatestyle = 0;
+		if (debug) {
+			printf("BarColumnShowsRate and EstimateBarVisible both enabled -> EstimateStyle set to 0\n");
+		}
+	}
 }
 
 void defaultcfg(void)
@@ -358,6 +368,7 @@ void defaultcfg(void)
 	cfg.transbg = TRANSBG;
 	cfg.imagescale = IMAGESCALE;
 	cfg.estimatestyle = ESTIMATESTYLE;
+	cfg.barshowsrate = BARSHOWSRATE;
 	strncpy_nt(cfg.cbg, CBACKGROUND, 8);
 	strncpy_nt(cfg.cedge, CEDGE, 8);
 	strncpy_nt(cfg.cheader, CHEADER, 8);
