@@ -251,6 +251,9 @@ and most can be changed later from the config file.
 /* 0 = not shown, 1 = continuation of existing bar, 2 = separate bar */
 #define ESTIMATESTYLE 1
 
+/* bar column in list outputs shows rate when rate column is visible */
+#define BARSHOWSRATE 0
+
 /* default colors */
 #define CBACKGROUND "FFFFFF"
 #define CEDGE "AEAEAE"
@@ -282,7 +285,7 @@ typedef struct {
 	int32_t unitmode, rateunitmode, rateunit, bvar, qmode, sampletime, hourlyrate, summaryrate;
 	int32_t monthrotate, monthrotateyears, maxbw, spacecheck, trafficlessentries, transbg, ostyle;
 	int32_t defaultdecimals, hourlydecimals, hourlystyle, is64bit, waldb, dbsynchronous, imagescale;
-	int32_t estimatebarvisible, estimatestyle;
+	int32_t estimatebarvisible, estimatestyle, barshowsrate;
 	char cfgfile[512], logfile[512], pidfile[512];
 	char daemonuser[33], daemongroup[33];
 	int32_t timesyncwait, updateinterval, pollinterval, saveinterval, offsaveinterval, savestatus;
